--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cs378-p4",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shreyasuratran.github.io/cs378-p4/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
